fixed few which now is visible because of more properly errors detecting. Sidebar is modified to work properly on mobile devices. Language dropdown moved to topbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,14 @@ adoptation for screen sizes
     }
 }
 
+@media (min-width: 700px){
+    .sidebar-lift {
+	position:absolute;
+	top:-50px;
+	z-index:5000;
+    }
+}
+
 .sidebar .nav-fourth-level li {
   border-bottom: none !important;
 }
